--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ window#waybar.empty #window {
 #idle_inhibitor,
 #scratchpad,
 #power-profiles-daemon,
-#language,
+#custom-lyric,
 #mpd,
 #custom-arch,
 #custom-search,
@@ -101,7 +101,7 @@ window#waybar.empty #window {
 #idle_inhibitor:hover,
 #scratchpad:hover,
 #power-profiles-daemon:hover,
-#language:hover,
+#custom-lyric:hover,
 #mpd:hover,
 #custom-arch:hover,
 #custom-search:hover,
